# shooter-game

./: CMakeLists.txt
assets/shaders/: pause_menu.frag  pause_menu.vert
src/: assetmanager.c  assetmanager.h  assets.c  callbacks.c  common.h  dev.h  entity.c  game.c  game.h  keyinput.c  main.c  objdata.h  object.c  object.h  player.h  scene.c  types.h  utils.c
